# SpaceCraft

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  MindSpace.code-workspace  README.md  SpaceCraft.code-workspace  rust-toolchain.toml
.cargo/: config.toml
.github/: ci.yml
.github/workflows/: ci.yml
assets/shaders/: white_material.wgsl
bevy_xpbd3d_parenting/: Cargo.toml
bevy_xpbd3d_parenting/src/: lib.rs
crates/bevy-blueprints/: Cargo.toml  README.md
crates/bevy-blueprints/src/: lib.rs
crates/bevy_xpbd3d_thrusters/: Cargo.toml  README.md
crates/bevy_xpbd3d_thrusters/src/: lib.rs
crates/bevy_xpbd3d_thrusters/tests/: internal_forces.rs  movements.rs  utils.rs
src/: bevy.rs  blocks.rs  bouncing_balls.rs  cameras.rs  core.rs  global.rs  lib.rs  main.rs  netcode.rs  physics.rs  player.rs  players.rs  prelude.rs  states.rs  ui.rs  utils.rs  world.rs
src/bevy/: camera.rs  netcode.rs  player.rs  setup.rs  ui.rs
src/bevy/netcode/: client.rs  server.rs
src/bevy/player/: thrust.rs  weapons.rs
src/bevy/player/thrust/: info_enactors.rs  info_gathering.rs  info_processors.rs  stages.rs  thrust_reactions.rs
src/bevy/ui/: bottom_left.rs  camtype.rs
src/blocks/: structure_block.rs  worldgen.rs
src/cameras/: camera_block.rs  resources.rs
src/core/: pixels.rs
src/core/pixels/: macros.rs  pixel_impls.rs  structures.rs  world_gen.rs
src/core/pixels/structures/: structure.rs  weapons.rs
src/global/: assets.rs  blueprints.rs
src/netcode/: world_creation.rs
src/players/: blocks.rs  player.rs  player_movement.rs  spawn_points.rs  thruster_block.rs
src/players/player_movement/: components.rs  input_processing.rs  systems.rs  utils.rs
src/players/player_movement/components/: force_axis.rs
src/ui/: start_screen.rs  ui_cameras.rs
src/utils/: scenes.rs  testing.rs  text.rs
testing/: Cargo.toml
testing/assets/shaders/: post_processing.wgsl  white_material.wgsl
testing/src/: instancing.rs  main.rs  post_processing.rs
xtask/: Cargo.toml  better-macos.yaml  better-windows.yaml
xtask/src/: lib.rs  main.rs
