[package]
name = "creativity-game"
default-run = "creativity-game"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = ["xtask"]

# [lints.clippy]


[features]
default = ["dev"]
## Only used while developing the game
dev = ["bevy/dynamic_linking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12", features = ["serialize"] }
bevy_mod_picking = "0.17"
bevy_screen_diagnostics = "0.4.0"
clap = { version = "4.4.8", features = ["derive"] }
extension-traits = "1.0.1"
meshtext = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
structstruck = "0.4.1"
strum = { version = "0.25.0", features = ["derive"] }

# hanabi particles
[dependencies.bevy_hanabi]
version = "0.8"
default-features = false
features = ["3d", "2d"]

# bevy_replicon
[dependencies.bevy_replicon]
git = "https://github.com/lifescapegame/bevy_replicon.git"

[dependencies.renet]
version = "*"
features = ["serde"]

[dependencies.bevy_editor_pls]
# git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
version = "0.6"
features = ["default_windows"]

[dependencies.bevy_xpbd_3d]
# version = "0.3.2"
features = ["enhanced-determinism", "serialize"]
git = "https://github.com/Jondolf/bevy_xpbd.git"

[dependencies.bevy_timewarp]
git = "https://github.com/ActuallyHappening/bevy_timewarp.git"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
