[package]
name = "space_craft"
default-run = "space_craft"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]
members = ["xtask", "testing", "crates/*"]

# [lints.clippy]


[features]
default = ["dev", "debug", "dep:bevycheck"]
debug = ["editor"]
editor = []
## Only used while developing the game
dev = ["bevy/dynamic_linking", "bevy/file_watcher"]

## The only feature flag that should be enabled when building this game
## in release mode
release = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = "0.21.0"
bevy_mod_picking = "0.17"
bevycheck = { version = "0.5", optional = true }
bevy_screen_diagnostics = "0.4.0"
clap = { version = "4.4.8", features = ["derive"] }
extension-traits = "1.0.1"
image = "0.24.7"
leafwing-input-manager = "0.11.2"
# meshtext = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
structstruck = "0.4.1"
strum = { version = "0.25.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
winit = "*"
surrealdb = "1.0.2"
bevy_web_asset = "0.7.0"

[dev-dependencies]
assert_float_eq = "1.1.3"
rand = "0.8.5"

[workspace.dependencies.bevy]
version = "0.12"
features = ["serialize"]

# hanabi particles
[dependencies.bevy_hanabi]
# version = "0.8"
# git = "https://github.com/ActuallyHappening/bevy_hanabi.git"
git = "https://github.com/djeedai/bevy_hanabi.git"
branch = "u/effect-properties"
default-features = false
features = ["3d", "2d"]


[dependencies.bevy_replicon]
# features = ["serde"]
# git = "https://github.com/ActuallyHappening/bevy_replicon.git"
git = "https://github.com/lifescapegame/bevy_replicon.git"

[dependencies.renet]
version = "*"
features = ["serde"]

[dependencies.bevy_editor_pls]
git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
# version = "0.6"
features = ["default_windows"]

[dependencies.bevy_xpbd_3d]
# version = "0.3.2"
features = ["enhanced-determinism", "serialize", "debug-plugin"]
git = "https://github.com/Jondolf/bevy_xpbd.git"
# git = "https://github.com/ActuallyHappening/bevy_xpbd.git"

[dependencies.bevy_xpbd3d_parenting]
git = "https://github.com/ActuallyHappening/bevy_xpbd3d_parenting.git"

[dependencies.bevy_timewarp]
git = "https://github.com/ActuallyHappening/bevy_timewarp.git"

[dependencies.bevy_dolly]
version = "0.0.2"
# git = "https://github.com/ActuallyHappening/bevy_dolly_cameras.git"

[dependencies.bevy_starfield]
git = "https://github.com/ActuallyHappening/bevy_starfield.git"

# [dependencies.uuid]
# version = "1.5.0"
# features = [
# 	"v4",                # Lets you generate random UUIDs
# 	"fast-rng",          # Use a faster (but still sufficiently random) RNG
# 	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ]

[dependencies.bevy_blueprints]
path = "crates/bevy-blueprints"
