[package]
name = "bevy_xpbd3d_parenting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_xpbd_3d = { workspace = true }
serde = { version = "1.0.192", features = ["derive"] }

[dependencies.bevy]
version = "0.12"
# default-features = false
# features = ["bevy_render"]