[package]
name = "bevy_xpbd3d_thrusters"
description = "An implementation of children-thrusters for bevy_xpbd (3d)"
version = "0.1.0"
edition = "2021"
authors = ["actuallyhappening <actuallyhappening42@gmail.com"]
license = "MIT OR Apache-2.0"
# repository = "https://github.com/ActuallyHappening/SpaceCraft"
keywords = ["gamedev", "physics", "simulation", "xpbd", "bevy"]
categories = ["game-development", "science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug"]
debug = []

[dependencies]
bevy-inspector-egui = "0.22.1"
serde = { version = "1.0.192", features = ["derive"] }
static_assertions = "1.1.0"

[dependencies.bevy_xpbd_3d_parenting]
git = "https://github.com/ActuallyHappening/bevy_xpbd_3d_parenting.git"
default-features = false

# also
[dependencies.bevy_xpbd_3d]
git = "https://github.com/Jondolf/bevy_xpbd.git"

[dependencies.bevy]
version = "0.12"

[dev-dependencies]
rand = "0.8.5"
